# mini_db

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
client/: CMakeLists.txt  main.cpp
client/include/: client_socket.h
client/src/: client_socket.cpp
common/: CMakeLists.txt
common/include/: bstarplus_index_tree.h  client_socket.h  command.h  constants.h  datatypes.h  exceptions.h
common/src/: bstarplus_index_tree.cpp  bstarplus_memory_tree.cpp  client_socket.cpp  command.cpp  conditions.cpp  database.cpp  datatypes.cpp  page.cpp  page_manager.cpp  slot.cpp  table.cpp
common/tests/: CMakeLists.txt  test_bstarplus_index_tree.cpp  test_common.cpp  test_page_manager.cpp  test_table.cpp
docs/: Архитектура.drawio
server/: CMakeLists.txt  main.cpp  main_storage_node.cpp
server/include/: command.h  entrypoint.h  lexer.h  parser.h  request_handler.h  server.h  server_socket.h  storage_engine.h
server/parser/: CMakeLists.txt
server/parser/include/: parser.h
server/src/: command.cpp  entrypoint.cpp  lexer.cpp  parser.cpp  request_handler.cpp  server.cpp  server_socket.cpp  storage_engine.cpp
server/tests/: CMakeLists.txt  test_command.cpp  test_heartbit.cpp  test_lexer.cpp  test_main_server.cpp  test_parser.cpp  test_request_handler.cpp  test_storage_engine.cpp
