add_library(
        common
        src/database.cpp
        src/page.cpp
        src/slot.cpp
        src/table.cpp
        src/command.cpp
        src/page_manager.cpp
        include/datatypes.h
        include/constants.h
        include/exceptions.h
        include/command.h
)

target_include_directories(
        common
        PUBLIC
        ./include
)
add_subdirectory(tests)