add_library(
        common
        src/database.cpp
        src/page.cpp
        src/slot.cpp
        src/table.cpp
        src/page_manager.cpp
        include/datatypes.h
        include/constants.h
        include/exceptions.h
)

target_include_directories(
        common
        PUBLIC
        ./include
)
target_link_libraries(
        common
        PUBLIC
        nlohmann_json::nlohmann_json
)
add_subdirectory(tests)