add_library(
        common
        src/database.cpp
        src/page.cpp
        src/page_manager.cpp
        src/slot.cpp
        src/table.cpp
        src/page_manager.cpp
        src/conditions.cpp
        include/datatypes.h
        include/constants.h
        include/exceptions.h
        include/bstarplus_index_tree.h
        src/bstarplus_index_tree.cpp
)

target_include_directories(
        common
        PUBLIC
        ./include
)
target_link_libraries(
        common
        PUBLIC
        nlohmann_json::nlohmann_json
        Boost::asio
        Boost::uuid
        Boost::process
        spdlog::spdlog
        wsock32
        ws2_32
)
add_subdirectory(tests)
