add_library(
        server
        include/storage_engine.h
        include/lexer.h
        include/command.h
        include/parser.h
        include/entrypoint.h
        include/server_socket.h
        src/storage_engine.cpp
        src/lexer.cpp
        src/command.cpp
        src/parser.cpp
        src/entrypoint.cpp
        src/server_socket.cpp
)

target_include_directories(
        server
        PUBLIC
        ./include
        ../common/include
)
target_link_libraries(
        server
        PUBLIC
        common
        nlohmann_json::nlohmann_json
        taocpp::pegtl
)
add_executable(
        main_server main.cpp
)
add_executable(
        main_storage_node main_storage_node.cpp
)
target_include_directories(
        server
        PUBLIC
        ../common/include
)
target_link_libraries(
        server
        PUBLIC
        common
)
target_link_libraries(
        server
        PUBLIC
        server
)
target_link_libraries(
        main_storage_node
        PUBLIC
        server
)
add_subdirectory(tests)
