add_executable(
        test_common
        test_common.cpp
)
add_executable(
        test_page_manager
        test_page_manager.cpp
)
add_executable(
        test_table
        test_table.cpp
)
target_link_libraries(
        test_common
        PRIVATE
        common
)
target_link_libraries(
        test_page_manager
        PRIVATE
        common
        gtest
)
target_link_libraries(
        test_table
        PRIVATE
        common
        gtest
)