add_executable(
        test_lexer
        test_lexer.cpp
)
add_executable(
        test_storage_engine
        test_storage_engine.cpp
)
target_link_libraries(
        test_lexer
        PRIVATE
        server
        GTest::gtest_main
)
target_link_libraries(
        test_storage_engine
        PRIVATE
        server
        GTest::gtest_main
)