add_executable(
        test_lexer
        test_lexer.cpp
)
target_link_libraries(
        test_lexer
        PRIVATE
        server
        GTest::gtest_main
)

add_executable(
        test_parser
        test_parser.cpp
)
target_link_libraries(
        test_parser
        PRIVATE
        server
        GTest::gtest_main
)
