add_executable(
        test_lexer
        test_lexer.cpp
)
add_executable(
        test_storage_engine
        test_storage_engine.cpp
)
add_executable(
        test_command
        test_command.cpp
)
target_link_libraries(
        test_lexer
        PRIVATE
        server
        GTest::gtest_main
)

target_link_libraries(
        test_command
        PRIVATE
        server
        GTest::gtest_main
)

add_executable(
        test_parser
        test_parser.cpp
)
target_link_libraries(
        test_parser
        PRIVATE
        server
        GTest::gtest_main
)

target_link_libraries(
        test_storage_engine
        PRIVATE
        server
        GTest::gtest_main
)

add_executable(
        test_heartbit
        test_heartbit.cpp
)
target_link_libraries(
        test_heartbit
        PRIVATE
        server
        GTest::gtest_main
)
